--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: false
 ---
 <figure></figure>
   <a href="/assets/images/summercamp.jpg" class="image-popup" title="WTKO Summer Camp 2025">
-    <img src="/assets/images/summercamp.jpg" alt="WTKO Summer Camp 2025">
+    <img src="./assets/images/summercamp.jpg" alt="WTKO Summer Camp 2025">
   </a>
   <!--figcaption>This is a figure caption.</figcaption-->
 </figure>
